--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Java CI with Maven
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: main
 
 permissions:
   contents: write
@@ -15,7 +15,12 @@ jobs:
   build:
     name: Build On
 
-    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: Clone code from repo
